// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormFieldSkeleton /> should render a form field skeleton 1`] = `
<Fragment>
  <BlockSkeleton
    display="block"
    height={24}
    margins={
      Object {
        "bottom": 8,
      }
    }
    showSkeleton={true}
    width={200}
  />
  <BlockSkeleton
    display="block"
    height={40}
    margins={
      Object {
        "bottom": 24,
      }
    }
    showSkeleton={true}
  />
</Fragment>
`;

exports[`<FormSkeleton /> should render a form skeleton 1`] = `
<Fragment>
  <FormFieldSkeleton />
  <FormFieldSkeleton />
  <FormFieldSkeleton />
  <BlockSkeleton
    display="block"
    height={40}
    margins={
      Object {
        "top": 8,
      }
    }
    showSkeleton={true}
    width={120}
  />
</Fragment>
`;
